{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 587,
  "lineage": "74291e15-fa40-57c2-01a1-f8e6008e3968",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "carla-pilot-igwy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854678551770:internet-gateway/igw-0c876a8f456234d03",
            "id": "igw-0c876a8f456234d03",
            "owner_id": "854678551770",
            "tags": {
              "Name": "carla-pilot-igwy"
            },
            "vpc_id": "vpc-09c6313e7e8671240"
          },
          "dependencies": [
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "carla-pilot-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854678551770:loadbalancer/app/carla-pilot-lb/654025dfa64e63c5",
            "arn_suffix": "app/carla-pilot-lb/654025dfa64e63c5",
            "dns_name": "carla-pilot-lb-1512686094.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:854678551770:loadbalancer/app/carla-pilot-lb/654025dfa64e63c5",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "carla-pilot-lb",
            "security_groups": [
              "sg-0fac1e145bc91e89c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-054d93747d718f12b"
              },
              {
                "subnet_id": "subnet-07359343a077ef9ae"
              }
            ],
            "subnets": [
              "subnet-054d93747d718f12b",
              "subnet-07359343a077ef9ae"
            ],
            "vpc_id": "vpc-09c6313e7e8671240",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.carla-pilot-lb-sg",
            "aws_subnet.carla-pilot-prv01-sn",
            "aws_subnet.carla-pilot-prv02-sn",
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "carla-pilot-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854678551770:listener/app/carla-pilot-lb/654025dfa64e63c5/f64ab325830fe37e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:854678551770:targetgroup/carla-pilot-trgrp/cc64d789f0c11aa5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:854678551770:listener/app/carla-pilot-lb/654025dfa64e63c5/f64ab325830fe37e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:854678551770:loadbalancer/app/carla-pilot-lb/654025dfa64e63c5",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.carla-pilot-lb",
            "aws_lb_target_group.carla-pilot-trgrp",
            "aws_security_group.carla-pilot-lb-sg",
            "aws_subnet.carla-pilot-prv01-sn",
            "aws_subnet.carla-pilot-prv02-sn",
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "carla-pilot-trgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:854678551770:targetgroup/carla-pilot-trgrp/cc64d789f0c11aa5",
            "arn_suffix": "targetgroup/carla-pilot-trgrp/cc64d789f0c11aa5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:854678551770:targetgroup/carla-pilot-trgrp/cc64d789f0c11aa5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "carla-pilot-trgrp",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09c6313e7e8671240"
          },
          "dependencies": [
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "carla-pilot-rtbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854678551770:route-table/rtb-0b23108c1e6999e26",
            "id": "rtb-0b23108c1e6999e26",
            "owner_id": "854678551770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c876a8f456234d03",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "carla-pilot-rtbl"
            },
            "vpc_id": "vpc-09c6313e7e8671240"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.carla-pilot-igwy",
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "carla-pilot-rtbl-assocA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5089015668b3e58",
            "route_table_id": "rtb-0b23108c1e6999e26",
            "subnet_id": "subnet-07359343a077ef9ae"
          },
          "dependencies": [
            "aws_internet_gateway.carla-pilot-igwy",
            "aws_route_table.carla-pilot-rtbl",
            "aws_subnet.carla-pilot-prv01-sn",
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "carla-pilot-rtbl-assocB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f7a3de8a776b21",
            "route_table_id": "rtb-0b23108c1e6999e26",
            "subnet_id": "subnet-054d93747d718f12b"
          },
          "dependencies": [
            "aws_internet_gateway.carla-pilot-igwy",
            "aws_route_table.carla-pilot-rtbl",
            "aws_subnet.carla-pilot-prv02-sn",
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "carla-pilot-rtbl-assocC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08083eec74a67b9ad",
            "route_table_id": "rtb-0b23108c1e6999e26",
            "subnet_id": "subnet-013f708b612e5c0a6"
          },
          "dependencies": [
            "aws_internet_gateway.carla-pilot-igwy",
            "aws_route_table.carla-pilot-rtbl",
            "aws_subnet.carla-pilot-pub-sn",
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "carla-pilot-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854678551770:security-group/sg-0fac1e145bc91e89c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fac1e145bc91e89c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "carla-pilot-lb-sg",
            "name_prefix": "",
            "owner_id": "854678551770",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "carla-pilot-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c6313e7e8671240"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "carla-pilot-lnchcfg-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854678551770:security-group/sg-03eed4a92435cc779",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03eed4a92435cc779",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "terraform-20210428221411378100000002",
            "name_prefix": "terraform-",
            "owner_id": "854678551770",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "carla-pilot-lnchcfg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c6313e7e8671240"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "carla-pilot-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854678551770:security-group/sg-0bf62d2c10bbafc6a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf62d2c10bbafc6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03eed4a92435cc779"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20210428221413161800000004",
            "name_prefix": "terraform-",
            "owner_id": "854678551770",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "carla-pilot-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c6313e7e8671240"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.carla-pilot-lnchcfg-sg",
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "carla-pilot-prv01-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854678551770:subnet/subnet-07359343a077ef9ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07359343a077ef9ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854678551770",
            "tags": {
              "Name": "carla-pilot-prv01-sn"
            },
            "tags_all": {
              "Name": "carla-pilot-prv01-sn"
            },
            "vpc_id": "vpc-09c6313e7e8671240"
          },
          "dependencies": [
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "carla-pilot-prv02-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854678551770:subnet/subnet-054d93747d718f12b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-054d93747d718f12b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854678551770",
            "tags": {
              "Name": "carla-pilot-prv02-sn"
            },
            "tags_all": {
              "Name": "carla-pilot-prv02-sn"
            },
            "vpc_id": "vpc-09c6313e7e8671240"
          },
          "dependencies": [
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "carla-pilot-pub-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854678551770:subnet/subnet-013f708b612e5c0a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-013f708b612e5c0a6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854678551770",
            "tags": {
              "Name": "carla-pilot-pub-sn"
            },
            "tags_all": {
              "Name": "carla-pilot-pub-sn"
            },
            "vpc_id": "vpc-09c6313e7e8671240"
          },
          "dependencies": [
            "aws_vpc.carla-pilot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "carla-pilot-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854678551770:vpc/vpc-09c6313e7e8671240",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ef2f9a12854963e",
            "default_route_table_id": "rtb-061b6c00a7d9fe858",
            "default_security_group_id": "sg-09e1c7275ee0821b0",
            "dhcp_options_id": "dopt-2a533d50",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09c6313e7e8671240",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-061b6c00a7d9fe858",
            "owner_id": "854678551770",
            "tags": {
              "Name": "carla_pilot-vpc"
            },
            "tags_all": {
              "Name": "carla_pilot-vpc"
            }
          }
        }
      ]
    }
  ]
}